kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: decubitus
spec:
  selector:
    app: postgres-db
  ports:
  - port: 5432
    targetPort: 5432
