kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-backend-service
spec:
  type: ClusterIP
  selector:
    app: nestjs-backend
  ports:
  - port: 80
    targetPort: 3000
